--- a/assets/deveb-s1n0/_dal-orgusu.scss
+++ b/assets/deveb-s1n0/_dal-orgusu.scss
@@ -209,3 +209,146 @@ a+[data-kapaç]+label+label{
     visibility: hidden;
     transition: visibility 0.1s;
 }
+
+
+
+
+// TABINDEX ile dallık ve düğme
+
+[data-dallık] {
+  display: flex;
+  padding: 0;
+}
+
+[data-dallık] ul {
+  padding: 0;
+}
+
+[data-dallık] li {
+  list-style-type: none;
+}
+
+[data-dallık] li>a {
+  display: block;
+}
+
+[data-dallık] li>a+ul {
+  position: absolute;
+  z-index: 1;
+  /* anında geçiş yapmak için */
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.1s;
+}
+
+[data-düğüm][tabindex]:focus+ul {
+  opacity: 1;
+  visibility: visible;
+  /* işaretçi olaylarının alt öğeleri etkilemesine izin vermemek için auto yaz */
+  pointer-events: auto;
+  display: block;
+}
+
+[data-düğüm][tabindex]:focus {
+  /* etikete tıklayarak kapaç geçişi yapmalı */
+  pointer-events: none;
+}
+
+[data-düğüm][tabindex]+ul:hover {
+  opacity: 1;
+  visibility: visible;
+  /* işaretçi olaylarının alt öğeleri etkilemesine izin verme */
+  pointer-events: auto;
+  display: block;
+}
+
+/*******************************************/
+
+[data-dallık] li>a {
+  padding: 10px 20px;
+  background: orange;
+}
+
+[data-dallık] li>a:hover {
+  background: red;
+}
+
+/*****************************/
+
+[data-düğme~="öbek"] {
+  display: inline-flex;
+  position: relative;
+  font-size:13px;
+}
+
+[data-düğme~="öbek"]>div:first-child {
+  margin-right: -1px;
+}
+
+[data-düğüm][tabindex]+ul {
+  position: absolute;
+  z-index: 1;
+  display: none;
+  /* anında geçiş yapmak için */
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.1s;
+  margin: 0;
+  padding: 0;
+}
+
+[data-düğüm][tabindex]+ul li {
+  list-style-type: none;
+}
+
+/* GÖRÜNÜŞ TANIMLA **/
+
+[data-düğme]>div {
+  padding: 3px 5px;
+  display: block;
+  border: 1px solid #953095;
+  background-color: #2c2171;
+color: #ffffff;
+border-color: #1e164f;
+  text-decoration: none;
+  cursor: pointer;
+}
+[data-düğme]>div:hover,
+[data-düğme]>div:focus{
+  background-color: #1e164f;
+
+}
+
+
+[data-düğme~="öbek"] > div:first-child {
+  border-radius: 4px 0 0 4px;
+}
+
+[data-düğme~="öbek"] > div:nth-last-child(2) {
+  border-radius: 0 4px 4px 0;
+}
+
+[data-düğme~="öbek"]>[data-düğüm][tabindex]+ul {
+  background: #fff;
+  border-radius: .2rem;
+  box-shadow: .01rem .1rem .3rem rgba(70, 80, 90, .4);
+  list-style: none;
+  margin: 0;
+  min-width: 100%;
+  padding: .4rem;
+  transform: translateY(.2rem);
+  z-index: 300;
+  border: 1px solid #1e164f;
+  background-color: whitesmoke;
+  color: #1e164f;
+  text-decoration: none;
+  top: 100%;
+  min-width: 100%;
+}
+
+[data-düğme~="öbek"]>[data-düğüm][tabindex]+ul a {
+  padding: 5px 12px;
+  display: block;
+  color: #1e164f;
+  text-decoration: none;
+}
