CSS seçiciler düzeltildi.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
         </div>
 
         <div data-düğme="öbek" data-gnl="0" data-ort="1 /">
-          <div data-gnl="1 /" tabindex="0" data-düğüm>
+          <a data-gnl="1 /" tabindex="0" data-düğüm>
             {{ veri.on-surum[dil] }} 1.0
-          </div>
+          </a>
           <ul>
             <li>
               <a href="/0.1/">{{ veri.on-surum[dil] }} 0.1</a>
@@ -34,9 +34,9 @@
               <a href="/1.0/{{page.lang}}/">{{ veri.on-surum[dil] }} 1.0</a>
             </li>
           </ul>
-          <div data-gnl="0" tabindex="0" data-düğüm>
+          <a data-gnl="0" tabindex="0" data-düğüm>
             {{ veri.dili[dil] }}
-          </div>
+          </a>
           <ul>
             <li>
               <a href="/1.0/tr/">{{ veri.dili.tr }}</a>
