--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -7,43 +7,43 @@
 {% if page.url == anayol %}
   {% assign baslangic-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.gunce.url %}
+{% if page.url contains veri.[page.lang].gunce.url %}
   {% assign gunce-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kurulum.url %}
+{% if page.url contains veri.[page.lang].kurulum.url %}
   {% assign kurulum-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.goruntuluk-orgusu.url %}
+{% if page.url contains veri.[page.lang].goruntuluk-orgusu.url %}
   {% assign goruntuluk-orgusu-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.url %}
   {% assign kesitlik-orgusu-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.bolumleme-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.url %}
   {% assign bolumleme-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.yineleme-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.url %}
   {% assign yineleme-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.esnetme-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.url %}
   {% assign esnetme-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.aralama-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.aralama-duzeni.url %}
   {% assign aralama-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.bicimleme-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.url %}
   {% assign bicimleme-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.konumlama-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.url %}
   {% assign konumlama-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.siralama-duzeni.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.siralama-duzeni.url %}
   {% assign siralama-duzeni-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.kesitlik-orgusu.olcekler.url %}
+{% if page.url contains veri.[page.lang].kesitlik-orgusu.olcekler.url %}
   {% assign olcekler-ise-etkin = "etkin" %}
 {% endif %}
-{% if page.url contains veri.dene.url %}
+{% if page.url contains veri.[page.lang].dene.url %}
   {% assign dene-ise-etkin = "etkin" %}
 {% endif %}
 
@@ -61,79 +61,79 @@
 
   <ul class="imge" data-menü="görünür dikey">
     <li class="{{baslangic-ise-etkin}}">
-      <a href="{{yol}}{{veri.baslangic.url}}">
-        {{ veri.baslangic.[dil] }}
+      <a href="{{yol}}{{veri.[page.lang].baslangic.url}}">
+        {{ veri.[page.lang].baslangic.ad }}
       </a>
     </li>
     <li class="{{kurulum-ise-etkin}}">
-      <a href="{{yol}}{{veri.kurulum.url}}">
-        {{ veri.kurulum.[dil] }}
+      <a href="{{yol}}{{veri.[page.lang].kurulum.url}}">
+        {{ veri.[page.lang].kurulum.ad }}
       </a>
     </li>
     <li class="{{goruntuluk-orgusu-ise-etkin}}">
-      <a href="{{yol}}{{veri.goruntuluk-orgusu.url}}">
-        {{ veri.goruntuluk-orgusu.[dil] }}
+      <a href="{{yol}}{{veri.[page.lang].goruntuluk-orgusu.url}}">
+        {{ veri.[page.lang].goruntuluk-orgusu.ad }}
       </a>
     </li>
     <li class="{{kesitlik-orgusu-ise-etkin}}">
-      <a href="{{yol}}{{veri.kesitlik-orgusu.url}}">
-        {{ veri.kesitlik-orgusu.[dil] }}
+      <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.url}}">
+        {{ veri.[page.lang].kesitlik-orgusu.ad }}
       </a>
       <input id="kesitlik-örgüsü" type="checkbox" data-kapaç="sağda"
-             {% if page.url contains '/kesitlik-orgusu'%}checked{% endif %}>
+             {% if kesitlik-orgusu-ise-etkin == 'etkin' %}checked{% endif %}>
       <label for="kesitlik-örgüsü"><span>▽</span></label>
       <label for="kesitlik-örgüsü"><span>▼</span></label>
       <ul>
         <li class="{{bolumleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.bolumleme-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.bolumleme-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.ad }}
           </a>
         </li>
         <li class="{{yineleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.yineleme-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.yineleme-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.ad }}
           </a>
         </li>
         <li class="{{esnetme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.esnetme-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.esnetme-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.ad }}
           </a>
         </li>
         <li class="{{aralama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.aralama-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.aralama-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.aralama-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.aralama-duzeni.ad }}
           </a>
         </li>
         <li class="{{bicimleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.bicimleme-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.bicimleme-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.ad }}
           </a>
         </li>
         <li class="{{konumlama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.konumlama-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.konumlama-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.ad }}
           </a>
         </li>
         <li class="{{siralama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.siralama-duzeni.url}}">
-            {{ veri.kesitlik-orgusu.siralama-duzeni.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.siralama-duzeni.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.siralama-duzeni.ad }}
           </a>
         </li>
         <li class="{{olcekler-ise-etkin}}">
-          <a href="{{yol}}{{veri.kesitlik-orgusu.olcekler.url}}">
-            {{ veri.kesitlik-orgusu.olcekler.[dil] }}
+          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.olcekler.url}}">
+            {{ veri.[page.lang].kesitlik-orgusu.olcekler.ad }}
           </a>
         </li>
       </ul>
     </li>
     <li class="{{dene-ise-etkin}}">
-      <a href="{{veri.dene.url}}">
-        {{ veri.dene.[dil] }}
+      <a href="{{veri.[page.lang].dene.url}}">
+        {{ veri.[page.lang].dene.ad }}
       </a>
     </li>
     <li class="{{gunce-ise-etkin}}">
-      <a href="/{{veri.gunce.url}}">
-        {{ veri.gunce.[dil] }}
+      <a href="/{{veri.[page.lang].gunce.url}}">
+        {{ veri.[page.lang].gunce.ad }}
       </a>
     </li>
   </ul>
