--- a/assets/deveb-s1n0/deveb-en.css
+++ b/assets/deveb-s1n0/deveb-en.css
@@ -7861,7 +7861,7 @@ nav {
 }
 
 .imge a {
-  color: navy;
+  color: darkslateblue;
 }
 
 .imge[data-menü] li {
@@ -7874,17 +7874,13 @@ nav {
 }
 
 .imge[data-menü] li.etkin > a {
-  background-color: lightsteelblue;
-  border-radius: 8px;
-}
-
-.imge[data-menü] li.etkin > a:hover {
-  background-color: lightsteelblue;
+  border-radius: 4px;
+  font-weight: bold;
 }
 
 .imge[data-menü] li > a:hover {
   background-color: #ededed;
-  border-radius: 8px;
+  border-radius: 4px;
 }
 
 .imge[data-menü] li > a,
