--- a/assets/deveb-s1n0/deveb-en.css
+++ b/assets/deveb-s1n0/deveb-en.css
@@ -125,7 +125,7 @@ ul h1, ul h2, ul h3, ul h4, ul h5, ul h6 {
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-/*  GENEL | Ekran ölçeği: 0 ≤ * < ∞
+/*  GENEL | Görüntülük ölçeği: 0 ≤ * < ∞
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 :root,
 [data-gnl] {
@@ -2279,7 +2279,7 @@ S01 [data-ufk] UFAK-BÜYÜKLERİYLE | 300px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-S02 kçk | Ekran ölçeği: 576px ≤ *
+S02 kçk | Görüntülük ölçeği: 576px ≤ *
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 576px) {
   [data-sm~="full"] {
@@ -3343,7 +3343,7 @@ S02 kçk | Ekran ölçeği: 576px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-S03 ort | Ekran ölçeği: 768px ≤ *
+S03 ort | Görüntülük ölçeği: 768px ≤ *
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 768px) {
   [data-md~="full"] {
@@ -4407,7 +4407,7 @@ S03 ort | Ekran ölçeği: 768px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-S04 byk | Ekran ölçeği: 992px ≤ *
+S04 byk | Görüntülük ölçeği: 992px ≤ *
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 992px) {
   [data-lg~="full"] {
@@ -5471,7 +5471,7 @@ S04 byk | Ekran ölçeği: 992px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-S05 kcm | Ekran ölçeği: 1200px ≤ *
+S05 kcm | Görüntülük ölçeği: 1200px ≤ *
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 1200px) {
   [data-xl~="full"] {
@@ -6535,7 +6535,7 @@ S05 kcm | Ekran ölçeği: 1200px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-S06 dev | Ekran ölçeği: 1900px ≤ *
+S06 ulu | Görüntülük ölçeği: 1900px ≤ *
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 1900px) {
   [data-hg~="full"] {
@@ -7605,7 +7605,7 @@ S06 dev | Ekran ölçeği: 1900px ≤ *
   [data-xs~="büyükleriyle-kap"],
   [data-mn~="büyükleri-kap"],
   [data-mn~="büyükleriyle-kap"] {
-    max-width: 1890px !important;
+    max-width: 1600px !important;
   }
 
   [data-hg~="hide"],
@@ -7616,7 +7616,7 @@ S06 dev | Ekran ölçeği: 1900px ≤ *
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-kcm | Ekran ölçeği: 0 < 1900px
+kcm | Görüntülük ölçeği: 0 < 1900px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 1900px) {
   [data-hg~="hide-smaller"],
@@ -7626,7 +7626,7 @@ kcm | Ekran ölçeği: 0 < 1900px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-byk | Ekran ölçeği: 0 < 1200px
+byk | Görüntülük ölçeği: 0 < 1200px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 1200px) {
   [data-xl~="hide-smaller"],
@@ -7636,7 +7636,7 @@ byk | Ekran ölçeği: 0 < 1200px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-ort | Ekran ölçeği: 0 < 992px
+ort | Görüntülük ölçeği: 0 < 992px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 992px) {
   [data-lg~="hide-smaller"],
@@ -7646,7 +7646,7 @@ ort | Ekran ölçeği: 0 < 992px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-kçk | Ekran ölçeği: 0 < 768px
+kçk | Görüntülük ölçeği: 0 < 768px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 768px) {
   [data-md~="hide-smaller"],
@@ -7656,7 +7656,7 @@ kçk | Ekran ölçeği: 0 < 768px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-ufk | Ekran ölçeği: 0 < 576px
+ufk | Görüntülük ölçeği: 0 < 576px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 576px) {
   [data-sm~="hide-smaller"],
@@ -7666,7 +7666,7 @@ ufk | Ekran ölçeği: 0 < 576px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-mnk | Ekran ölçeği: 0 < 300px
+mnk | Görüntülük ölçeği: 0 < 300px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 300px) {
   [data-xs~="hide-smaller"],
@@ -7678,7 +7678,7 @@ mnk | Ekran ölçeği: 0 < 300px
 }
 /*  DUYARLI TİP - YALIN |< * >| */
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-mnk | Ekran ölçeği: 0 ≤ * < 300px
+mnk | Görüntülük ölçeği: 0 ≤ * < 300px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (max-width: 300px) {
   [data-gnl~="container"],
@@ -7698,7 +7698,7 @@ mnk | Ekran ölçeği: 0 ≤ * < 300px
   [data-hg~="küçükleri-kap"],
   [data-hg~="küçükleriyle-kap"] {
     width: 100%;
-    max-width: 100% !important;
+    max-width: calc("100% - 10px") !important;
   }
 
   /* Gizleme */
@@ -7707,7 +7707,7 @@ mnk | Ekran ölçeği: 0 ≤ * < 300px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-ufk | Ekran ölçeği: 300px ≤ * < 576px
+ufk | Görüntülük ölçeği: 300px ≤ * < 576px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 300px) and (max-width: 576px) {
   [data-gnl~="container"],
@@ -7727,7 +7727,7 @@ ufk | Ekran ölçeği: 300px ≤ * < 576px
   [data-hg~="küçükleri-kap"],
   [data-hg~="küçükleriyle-kap"] {
     width: 100%;
-    max-width: calc(100% - 20px) !important;
+    max-width: calc("100% - 20px") !important;
   }
 
   /* Gizleme */
@@ -7736,7 +7736,7 @@ ufk | Ekran ölçeği: 300px ≤ * < 576px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-kçk | Ekran ölçeği: 576px ≤ * < 768px
+kçk | Görüntülük ölçeği: 576px ≤ * < 768px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 576px) and (max-width: 768px) {
   [data-gnl~="container"],
@@ -7765,7 +7765,7 @@ kçk | Ekran ölçeği: 576px ≤ * < 768px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-ort | Ekran ölçeği: 768px ≤ * < 992px
+ort | Görüntülük ölçeği: 768px ≤ * < 992px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 768px) and (max-width: 992px) {
   [data-gnl~="container"],
@@ -7794,7 +7794,7 @@ ort | Ekran ölçeği: 768px ≤ * < 992px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-byk | Ekran ölçeği: 992px ≤ * < 1200px
+byk | Görüntülük ölçeği: 992px ≤ * < 1200px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 992px) and (max-width: 1200px) {
   [data-gnl~="container"],
@@ -7823,7 +7823,7 @@ byk | Ekran ölçeği: 992px ≤ * < 1200px
   }
 }
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-kcm | Ekran ölçeği: 1200px ≤ * < 1900px
+kcm | Görüntülük ölçeği: 1200px ≤ * < 1900px
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media screen and (min-width: 1200px) and (max-width: 1900px) {
   [data-gnl~="container"],
@@ -8207,6 +8207,10 @@ a + [data-kapaç] + label + label {
   display: block;
   color: #1e164f;
   text-decoration: none;
+}
+
+[data-düğme~="öbek"] > [data-düğüm][tabindex] + ul a:hover {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=deveb-en.css.map */
